# search-engine-in-rust

./: .gitignore  Cargo.toml
res/: test.txt
src/: main.rs
