[package]
name = "search-engine-in-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
crossbeam = "0.8"
reqwest = { version = "0.11", features = ["blocking"] }
rand = "0.8"
regex = "1.5"
simple-pagerank = "0.2.0"
indicatif = "0.17.7"

[features]
crawl = []
pagerank = []
